--- a/Install-erp/addons/crm/views/crm_lead_views.xml
+++ b/Install-erp/addons/crm/views/crm_lead_views.xml
@@ -24,6 +24,11 @@
                             string="Generate the final products list"
                             class="btn-primary"
                            />
+                    <button name="action_create_rfq"
+                            type="object"
+                            string="Create RFQ"
+                            class="btn-primary"
+                    />
                     <field name="final_product_list_generated" invisible="1"/>
 
 
