--- a/Install-erp/addons/purchase/views/purchase_views.xml
+++ b/Install-erp/addons/purchase/views/purchase_views.xml
@@ -614,7 +614,7 @@
             <thead>
                 <tr>
                     <!-- Bigger headers -->
-                    <th style="text-align: left; font-size: 1.2em;">Additional Cost</th>
+                    <th style="text-align: left; font-size: 1.2em;">Cost By Product</th>
                     <th style="text-align: right; font-size: 1.2em;">Total Amount (Dinar)</th>
                 </tr>
             </thead>
@@ -622,7 +622,7 @@
                 <tr>
                     <!-- Bigger cells -->
                     <td style="text-align: left; font-size: 1.1em;">
-                        <field name="additional_cost_per_unit"/>
+                        <field name="cost_by_product"/>
                     </td>
                     <td style="text-align: right; font-size: 1.1em;">
                         <field name="total_amount_dinar"/>
@@ -638,6 +638,19 @@
 
                             </group>
                         </page>
+                         <page string="Cost Price">
+                    <field name="cost_line_ids">
+                        <tree editable="bottom">
+                            <field name="product_id"/>
+                            <field name="barcode"/>
+                            <field name="description"/>
+                            <field name="quantity"/>
+                            <field name="uom_id"/>
+                            <field name="purchase_price"/>
+                            <field name="prix_de_revient"/>
+                        </tree>
+                    </field>
+                </page>
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
