--- a/Install-erp/addons/crm/views/crm_lead_views.xml
+++ b/Install-erp/addons/crm/views/crm_lead_views.xml
@@ -396,7 +396,7 @@
                             <field name="final_product_list_ids">
                                 <tree editable="bottom">
                                     <field name="barcode" string="PN"/>
-                                    <field name="product_template_id"/>
+                                    <field name="product_id"/>
                                     <field name="description"/>
                                     <field name="quantity"/>
                                     <field name="uom_id"/>
@@ -421,7 +421,7 @@
                     <field name="estimation_line_ids">
                         <tree editable="bottom">
                             <field name="barcode"/>
-                            <field name="product_template_id"/>
+                            <field name="product_id"/>
                             <field name="description"/>
                             <field name="quantity"/>
                             <field name="uom_id"/>
