--- a/Install-erp/addons/crm/views/crm_lead_views.xml
+++ b/Install-erp/addons/crm/views/crm_lead_views.xml
@@ -23,6 +23,7 @@
                             type="object"
                             string="Generate the final products list"
                             class="btn-primary"
+                            invisible="final_product_list_generated"
                     />
                     <button name="action_create_rfq"
                             type="object"
@@ -64,25 +65,25 @@
                                 <span class="o_stat_text" invisible="duplicate_lead_count &gt; 1">Similar Lead</span>
                             </div>
                         </button>
-                                                <field name="rfq_count" invisible="1"/>
+                                                <field name="rfq_created" invisible="1"/>
 
                         <button name="action_view_rfqs"
                                 type="object"
                                 string="View RFQ"
                                 class="oe_stat_button"
                                 icon="fa-file-text-o"
-                                invisible="rfq_count">
+                                invisible="not rfq_created">
 
                         </button>
 
 
-                        <field name="purchase_order_count" invisible="1"/>
+                        <field name="purchase_order_created" invisible="1"/>
                         <button name="action_view_purchase_rfq"
                                 string="View Purchase Order"
                                 type="object"
                                 class="oe_stat_button"
                                 icon="fa-shopping-cart"
-                                invisible="purchase_order_count">
+                                invisible="not purchase_order_created">
 
                         </button>
                     </div>
