Update Purchase RFQ: - email : needs more checking to see if the email will be CC or not

--- a/Install-erp/addons/purchase/views/purchase_rfq_views.xml
+++ b/Install-erp/addons/purchase/views/purchase_rfq_views.xml
@@ -96,7 +96,9 @@
                                    context="{'res_partner_search_mode': 'supplier', 'show_vat': True}"
                                    placeholder="Name, TIN, Email, or Reference"
                                    readonly="state in ['cancel', 'purchase']"
-                                   options="{'no_create': True}"/>
+                                   options="{'no_create': True}"
+                                   required="state == 'sent'"
+                                   invisible="state != 'sent'"/>
                             >
                             <field name="partner_ref"/>
 
