Update purchase Order : - the cost price is now fetching from order line - purchase_price = unit_price - prix de revient works

--- a/Install-erp/addons/purchase/views/purchase_views.xml
+++ b/Install-erp/addons/purchase/views/purchase_views.xml
@@ -653,6 +653,7 @@
                                     <field name="quantity"/>
                                     <field name="uom_id"/>
                                     <field name="purchase_price"/>
+                                    <field name="cost_by_product"/>
                                     <field name="prix_de_revient"/>
                                 </tree>
                             </field>
