--- a/Install-erp/addons/purchase/views/purchase_views.xml
+++ b/Install-erp/addons/purchase/views/purchase_views.xml
@@ -194,6 +194,8 @@
                     </div>
                     <group>
                         <group>
+                                                        <field name="crm_lead_id" invisible="0" />
+
                             <field name="partner_id" widget="res_partner_many2one"
                                    context="{'res_partner_search_mode': 'supplier', 'show_vat': True}"
                                    placeholder="Name, TIN, Email, or Reference"
